      inspired by Mikko Korpela's proposal in \PR{16527}.

      \item Illegal factors, e.g., with duplicated levels (illegal but
      constructable) now give a warning when printed, via new
      \code{.valid.factor}.

      \item \code{extSoftVersion()} now reports the version (if any) of
      the \code{readline} library in use.
    }
  }
  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item The deprecated support for PCRE versions 8.10 to 8.31 will
      be removed prior to \R 3.4.0.

      \item (Windows only) Function \code{setInternet2()} is defunct.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Getting or setting \code{body()} or \code{formals()} on
      non-functions for now signals a warning and may become an error
      for setting.

      \item When a class name matches multiple classes in the cache,
      perform a dynamic search in order to obey namespace imports. This
      should eliminate annoying messages about multiple hits in the
      class cache. Also, pass along the package from the
      \code{ClassExtends} object when looking up superclasses in the
      cache.

      \item \code{match(x, t)}, \code{duplicated(x)} and
      \code{unique(x)} work as documented for complex numbers with \code{NA}s
      or \code{NaN}s, namely by treating them as two equivalence
      \dQuote{classes}, those with \code{NA} and those with
      non-\code{NA} \code{NaN}s.
      %% \code{print(x)} remains back compatible, treating all
      %% \code{NA}s identically, but showing real and imaginary parts
      %% for the \code{NaN} \dQuote{class}.

      \item Versions of the \code{readline} library >= 6.3 had been
      changed so that terminal window resizes were not signalled to
      \code{readline}: code has been added using a explicit signal
      handler to work around that.  (\PR{16604})

      \item \code{deparse(<complex>, options = "digits17")} prints more
      nicely now, mostly thanks to a suggestion by Richie Cotton.